data/derived/comb/progs/unify/prog0687.ml.out
Characters 22-25:
  let _ = "a" :: "b" :: "c";;
                        ^^^
Error: This expression has type string but an expression was expected of type
         string list
